hacking camp 2021 s2: merge upstream/src into src
commit a347b65e9d9a7f616260220efd5b8ff00687c378
Author: YiniXu9506 <xuyini@pingcap.com>
Date:   Fri Jul 2 18:54:48 2021 +0800

    chore: udpate tidb download package

commit eac12006c36accfbf464ca17ca901e722b5f473a
Author: YiniXu9506 <xuyini@pingcap.com>
Date:   Fri Jul 2 17:48:43 2021 +0800

    chore: replace pingcap university with pingcap education

commit 0f75370d90e6ab7e402881ea017ce88045acb475
Author: Nick Qi <wei.qi.nick@gmail.com>
Date:   Fri Jul 2 21:13:04 2021 +1200

    CP-39 doc: add a new tutor (#559)

commit 1fccb1aa42958603ecc51c3fd954369b21a4da21
Author: Nick Qi <wei.qi.nick@gmail.com>
Date:   Fri Jul 2 20:15:22 2021 +1200

    CP-39 feat: implement the page for the hacking camp 2021s2 (#558)

    * CP-39 refactor: add placeholder files for the hacking camp

    * CP-39 refactor: auto generate the entry files for the webpack config

    * CP-39 feat: add placeholder files

    * CP-39 refactor: reuse hackathon2020 script but customize milestone date

    * CP-39 style: use the individual styling file for the new camp

    * CP-39 style: update tutors and sponsors

    * CP-39 style: update stylings for the sponsors module

    * CP-39 feat: update tuitors' avatars and description

    * CP-39 feat: update winners section

    * CP-39 feat: complete awards list

    * CP-39 style: update card stylings

    * CP-39 feat: update card info on the aggregation page

    * CP-39 feat: update project link and brand logo

    * CP-39 fix: update the interaction of hovering on cover images

    * CP-39 docs: update texts

    * CP-39 fix: fix an compatibility issue on safari

    * CP-39 docs: update texts

    * CP-39 refactor: auto-format the code by IDE

    * CP-39 feat: update text

    * CP-39 refactor: compress svg icons

commit 137f2049af31e88d42328a438183c5fe6ecc0c6f
Author: YiniXu9506 <xuyini@pingcap.com>
Date:   Thu Jul 1 13:18:39 2021 +0800

    chore: update medias logo on devcon2021'

commit 3a6

--- a/layouts/community-cn/list.html
+++ b/layouts/community-cn/list.html
@@ -113,7 +113,7 @@
                     <a href="{{ $i.link }}">
                         <div class="picture">
                             <img class="lazy" height="65" src="/images/svgs/loader-spinner.svg"
-                                data-original="{{ $i.active_image_mobile }}" alt="Community activity" />
+                                data-original="{{ $i.active_image_mobile | absURL }}" alt="Community activity" />
                         </div>
                         <div class="name">{{ $i.name }}</div>
                         <div class="summary">
