--- a/layouts/community-cn/devcon2021.html
+++ b/layouts/community-cn/devcon2021.html
@@ -212,7 +212,7 @@ DevCon 2021
 
     <section class="devcon2021-sponsors">
         <div class="container">
-            <h2 id="sponsors" class="section-title">支持媒体</h2>
+            <h2 id="sponsors" class="section-title">支持媒体及社区</h2>
             <div class="medias">
                 {{- range $idx, $i := .Site.Data.devcon.support_meida2021 -}}
                 <a href="{{ $i.link }}" target="_blank"><img class="lazy" src="/images/svgs/loader-spinner.svg"
