--- a/src/less/community/devcon2021.less
+++ b/src/less/community/devcon2021.less
@@ -664,6 +664,11 @@
                     width: 200px;
                     height: auto;
                 }
+
+                &.big-img {
+                    height: 120px;
+                    padding: 1rem;
+                }
             }
 
             .media {
