CP-124 fix: update button link for the playback

--- a/layouts/community-cn/devcon2021.html
+++ b/layouts/community-cn/devcon2021.html
@@ -35,8 +35,8 @@ DevCon 2021
                 <div class="column">
                     <img class="logo" src="/images/community/devcon2021/pingcap-tidb-logo.png" />
                     <img class="slogan" src="/images/community/devcon2021/slogan.svg" />
-                    <a href="http://www.huodongxing.com/event/3601574266800?qd=website" target="_blank">
-                        <div class="button signup-btn">立即报名</div>
+                    <a href="https://app.ma.scrmtech.com/meetings/MeetingPc/Detail?pf_uid=19697_1864&id=34389&source=2&pf_type=3&channel_id=9034&channel_name=%E7%BD%91%E7%AB%99-PingCAP&tag_id=3139bdcef9046473" target="_blank">
+                        <div class="button signup-btn">观看回放</div>
                     </a>
                     <p>2021.7.23 - 24 | 北京望京凯悦酒店</p>
                 </div>
@@ -47,8 +47,8 @@ DevCon 2021
             <div class="hero-mobile">
                 <img src="/images/community/devcon2021/hero-bg.svg" />
                 <img class="slogan" src="/images/community/devcon2021/slogan.svg" />
-                <a href="http://www.huodongxing.com/event/3601574266800?qd=website" target="_blank">
-                    <div class="button signup-btn">立即报名</div>
+                <a href="https://app.ma.scrmtech.com/meetings/MeetingPc/Detail?pf_uid=19697_1864&id=34389&source=2&pf_type=3&channel_id=9034&channel_name=%E7%BD%91%E7%AB%99-PingCAP&tag_id=3139bdcef9046473" target="_blank">
+                    <div class="button signup-btn">观看回放</div>
                 </a>
                 <p>2021.7.23 - 24 | 北京望京凯悦酒店</p>
                 <img class="logo" src="/images/community/devcon2021/pingcap-tidb-logo.png" />
