--- a/layouts/community-cn/list.html
+++ b/layouts/community-cn/list.html
@@ -33,7 +33,7 @@
                             <span class="btn-text">成为 Contributor</span>
                         </button>
                     </a>
-                    <a href="https://tug.tidb.io/">
+                    <a href="https://tidb.io/tug">
                         <button class="community-btns">
                             <span class="arrow"><img src="/images/svgs/white-right-arrow.svg" alt="Arrow" /></span>
                             <span class="btn-text">加入 TUG</span>
